@@ -1,9 +1,9 @@
-# Note: this file was auto-generated by Module::Build::Compat version 0.33
+# Note: this file was auto-generated by Module::Build::Compat version 0.34
 use ExtUtils::MakeMaker;
 WriteMakefile
 (
           'PL_FILES' => {},
-          'INSTALLDIRS' => 'perl',
+          'INSTALLDIRS' => ($] >= 5.009003 ? 'perl' : 'site'),
           'NAME' => 'ExtUtils::CBuilder',
           'EXE_FILES' => [],
           'VERSION_FROM' => 'lib/ExtUtils/CBuilder.pm',
