@@ -2,6 +2,10 @@ Revision history for Perl extension ExtUtils::CBuilder.
 
 0.26_03 - 
 
+ Bugs fixed:
+ - Makefile.PL had wrong INSTALLDIRS setting for older Perls
+   (RT#47985) [David Golden]
+
 0.2602 - Sat Jul  4 10:57:12 EDT 2009
 
  Bugs fixed:
